--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	    <img src="images/buttonTwo.jpg" data-bgkey="2" alt="puzzle thumb img">
 			<img src="images/buttonThree.jpg" data-bgkey="3" alt="puzzle thumb img">
 		</nav>
+		<button  id="replay" >Replay</button>
 	</footer>
 
 	<script src="js/app.js"></script>
